macro_utilities/stringify_attr/src/tests/derive/extra_attr2.stderr
error: Expected a list. Found `extra = "C"`
  --> $DIR/extra_attr2.rs:20:38
   |
20 |         #[stringify(serde(rename(B), extra = "C"))]
   |                                      ^^^^^^^^^^^
